# bds-OS

./: CLAUDE.md  deno.json  package.json  tsconfig.json
.github/workflows/: deploy.yml  gate.yml  mirror-frontend.yml
data/: areas.json  lovable-question-mapping.json  maturity-levels.json  practice-metadata.json  practices.json
docs/: about.md  architecture.md  coherence-mece.md  csio-fit-mece.md  data-analytics-vision.md  external-patterns-review.md  framework.md  frontend-contract.md  how-it-works.md  industry-templates.md  integration-plan.md  lovable-prompts.md  lovable-state.md  pilot-plan.md  v1-plan.md
docs/blueprints/: README.md
docs/blueprints/functions/: compute-opi.ts  determine-lifecycle.ts  governance-report.ts  grade-evidence.ts  select-focus-portfolio.ts
docs/blueprints/migrations/: 001_companies_lifecycle.sql  002_lifecycle_weights.sql  003_practice_metadata.sql  004_maturity_rubrics.sql  005_evaluation_rounds_mode.sql  006_opi_scores.sql  007_focus_portfolios.sql  008_initiatives_artifacts.sql  009_evidence.sql  010_score_change_requests_approvals.sql  011_audit_log.sql  012_invitations.sql
docs/positioning/: ceo-pre-interview-brief.md  lovable-prompt-operator-landing.md  operator-flyer-content.md
imports/gsd-2/: .dockerignore  .npmignore  .prompt-injection-scanignore  .secretscanignore  VISION.md  package.json  tsconfig.extensions.json  tsconfig.json  tsconfig.resources.json  tsconfig.test.json
imports/gsd-2/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
imports/gsd-2/docker/: .env.example  Dockerfile.ci-builder  README.md  (+5 more)
imports/gsd-2/native/: .gitignore  Cargo.toml  README.md
imports/gsd-2/native/.cargo/: config.toml
imports/gsd-2/native/crates/ast/: Cargo.toml
imports/gsd-2/native/crates/ast/src/: ast.rs  glob_util.rs  lib.rs
imports/gsd-2/native/crates/ast/src/language/: mod.rs  parsers.rs
imports/gsd-2/native/crates/engine/: Cargo.toml
imports/gsd-2/native/crates/engine/src/: ast.rs  clipboard.rs  diff.rs  git.rs  glob.rs  glob_util.rs  gsd_parser.rs  highlight.rs  html.rs  image.rs  json_parse.rs  lib.rs  ps.rs  stream_process.rs  task.rs  text.rs  truncate.rs  ttsr.rs  xxhash.rs
imports/gsd-2/native/crates/grep/: Cargo.toml
imports/gsd-2/native/crates/grep/src/: lib.rs
imports/gsd-2/native/npm/darwin-arm64/: package.json
imports/gsd-2/native/npm/darwin-x64/: package.json
imports/gsd-2/native/npm/linux-arm64-gnu/: package.json
imports/gsd-2/native/npm/linux-x64-gnu/: package.json
imports/gsd-2/native/npm/win32-x64-msvc/: package.json
imports/gsd-2/native/scripts/: build.js
imports/gstack/: CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  TODOS.md  package.json
src/adapters/: lovable-jsonb-to-opi-input.ts
src/constants/: lifecycle-weights.ts  wip-limits.ts
src/engines/: delegation-index.ts  evidence-grader.ts  focus-portfolio.ts  lifecycle.ts  operating-debt.ts  opi.ts
src/types/: Database.ts  database.ts  governance.ts  kanban.ts  opi.ts
supabase/: seed.sql
supabase/migrations/: 20260221000001_create_enums.sql  20260221000002_create_core_tables.sql  20260221000003_create_assessment_tables.sql  20260221000004_create_opi_tables.sql  20260221000005_create_execution_tables.sql  20260221000006_create_governance_tables.sql  20260221000007_create_indexes.sql  20260221000008_create_rls_policies.sql  20260504000001_create_audit_log.sql  20260504000002_create_invitations.sql  20260506000001_create_framework.sql  20260506000002_seed_framework.sql  20260506000003_framework_rls.sql  20260506000004_seed_practices_and_kpis.sql  20260506000005_seed_maturity_rubrics.sql  20260506000006_ops_notifications.sql  20260506000007_practice_assignments.sql
(+1396 files in other folders)
