[package]
name = "gsd-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "N-API native addon for GSD — exposes high-performance Rust modules to Node.js"

[lib]
crate-type = ["cdylib", "rlib"]
test = false
doctest = false

[dependencies]
gsd-ast = { path = "../ast" }
gsd-grep = { path = "../grep" }
arboard = "3"
dashmap = "6"
globset = "0.4"
html-to-markdown-rs = { version = "2", default-features = false }
ignore = "0.4"
memchr = "2"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "gif",
  "webp",
] }
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"
regex = "1"
serde_json = "1"
similar = "2"
smallvec = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
unicode-segmentation = "1"
unicode-width = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

[build-dependencies]
napi-build = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
