[package]
name = "gsd-grep"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Ripgrep-backed search library for GSD native engine"

[dependencies]
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
rayon = "1.10"
